--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -6,6 +6,10 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="ifRoom"
-        android:title="@string/action_settings" android:icon="@drawable/ic_action_overflow"/>
+        android:title="@string/action_settings" android:icon="@drawable/ic_action_overflow">
+        <menu>
+            <item android:id="@+id/action_settings_select_device" android:title="@string/action_settings_select_device"/>
+        </menu>
+    </item>
 
 </menu>
