--- a/res/layout/activity_select_bluetooth_device_dialog.xml
+++ b/res/layout/activity_select_bluetooth_device_dialog.xml
@@ -7,29 +7,36 @@
 
     <TextView
         android:id="@+id/tvPariedDeviceList"
-		android:layout_width="wrap_content"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content" 
         android:text="@string/dialog_text_paired_device_list"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge" 
+        android:visibility="visible"
+        android:background="#666"
+        android:textColor="#fff"
+        android:paddingLeft="5dp"/>
 
     <ListView
         android:id="@+id/lvPairedDevicesList"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="visible" >
     </ListView>
     
     <TextView
         android:id="@+id/tvUnpariedDeviceList"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/dialog_text_unpaired_device_list"
         android:textAppearance="?android:attr/textAppearanceLarge" 
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:background="#666"
+        android:textColor="#fff"
+        android:paddingLeft="5dp"/>
 
     <ListView
         android:id="@+id/lvUnpairedDevicesList"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="visible" >
     </ListView>
