Add Multiple callback between Fragment and Activity Change default string of some fragment Prevent Multiple Message send to Bluetooth getFragmentByTag and block null fragment access remove global variable communication between Fragment and Activity Add thread for timing control when Fragment View is created Dialog for ESC Name input

--- a/res/layout/tab_monitor.xml
+++ b/res/layout/tab_monitor.xml
@@ -60,7 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/tab_monitor_row_ambient_temp_value" />
+                android:text="@string/not_available" />
                         
 			<TextView
                 android:id="@+id/tvTabMonitorRowAmbientTempUnit"
@@ -88,7 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/tab_monitor_row_motor_speed_cur_value" />
+                android:text="@string/not_available" />
                         
 			<TextView
                 android:id="@+id/tvTabMonitorRowMotorSpeedCurUnit"
@@ -116,7 +116,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/tab_monitor_row_motor_speed_max_value" />
+                android:text="@string/not_available" />
                         
 			<TextView
                 android:id="@+id/tvTabMonitorRowMotorSpeedMaxUnit"
