--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="activity_horizontal_margin">5dp</dimen>
     <dimen name="activity_vertical_margin">5dp</dimen>
 
-    <dimen name="table_padding">5dp</dimen>
+    <dimen name="table_horizontal_padding">3dp</dimen>
+    <dimen name="table_vertical_padding">10dp</dimen>
     
 </resources>
