First version with Firmware Update state machine running with MCU ae528f527ef19c823e8b8f0fa66e50467c89b81d

--- a/res/layout/tab_protocol_testing.xml
+++ b/res/layout/tab_protocol_testing.xml
@@ -9,7 +9,16 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
         
-
+	    <Spinner
+	        android:id="@+id/spinnerProtocolTestingEpCmd"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content" />
+	    
+	    <Button 
+	        android:id="@+id/btnProtocolTestingSend"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/btn_send" />"
     </LinearLayout>
 </ScrollView>
 
