--- a/res/layout/tab_firmware_update.xml
+++ b/res/layout/tab_firmware_update.xml
@@ -23,8 +23,8 @@
 		<TextView
 		    android:id="@+id/tvFirmwareUpdateStatus"
 		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:maxLines="10"
+		    android:layout_height="match_parent"
+		    android:maxLines="999"
 		    android:text="@string/tab_fwup_status"
 		    android:textAppearance="?android:attr/textAppearanceMedium" />
 
